Development: Replace get(0) call with getFirst() (#9004)